--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tail",
+  "name": "ecommerce",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,12 +23,16 @@
   "private": true,
   "packageManager": "npm@11.6.1",
   "dependencies": {
+    "@angular/cdk": "^21.0.6",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@angular/material": "^21.0.6",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@ngneat/overview": "7.0.0",
+    "@ngxpert/hot-toast": "^6.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -39,8 +43,8 @@
     "@tailwindcss/postcss": "^4.1.12",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.7.4",
     "tailwindcss": "^4.1.12",
-    "typescript": "~5.9.2",
-    "vitest": "^4.0.8"
+    "typescript": "~5.9.2"
   }
 }
